codifying the color palette

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Introducing React Hooks</title>
   </head>
   <body>
-    <div class="slide">
+    <a class="back-to-top" href="#title">Back to Top</a>
+    <div id="title" class="slide">
       <img
         src="https://media.giphy.com/media/cDsPYzjHiFEQg/giphy.gif"
         alt="Captain Hook sprucing up"
@@ -24,9 +25,9 @@
           </a>
         </p>
       </div>
-      <a href="#slide1">Next</a>
+      <a class="next-navigator" href="#slide1">Next</a>
     </div>
 
-    <div class="slide"></div>
+    <div id="slide1" class="slide"></div>
   </body>
 </html>
