remove the next buttons; they are not working

--- a/index.html
+++ b/index.html
@@ -9,25 +9,66 @@
     <title>Introducing React Hooks</title>
   </head>
   <body>
-    <a class="back-to-top" href="#title">Back to Top</a>
     <div id="title" class="slide">
       <img
+        class="captain-hook-gif"
         src="https://media.giphy.com/media/cDsPYzjHiFEQg/giphy.gif"
         alt="Captain Hook sprucing up"
       />
       <h1 class="reallyBigHeader">React Hooks</h1>
-      <div>
-        <p>Kyle Hall</p>
-        <p>Software Artisan</p>
-        <p>
-          <a href="https://kylehall.io">
-            My Website
-          </a>
-        </p>
-      </div>
-      <a class="next-navigator" href="#slide1">Next</a>
     </div>
 
-    <div id="slide1" class="slide"></div>
+    <div id="slide1" class="slide">
+      <h2>A Little Background</h2>
+      <ul>
+        <li>
+          Before we launch into hooks, I'll give a little background on why we might we might want
+          hooks at all.
+        </li>
+        <li>
+          The main impetus for hooks is class-based components vs functional components.
+        </li>
+      </ul>
+    </div>
+
+    <div id="slide2" class="slide">
+      <h2>Functional Components</h2>
+      <ul>
+        <li>
+          Use ES2015 classes that inherit from React to create components.
+        </li>
+        <li>
+          They allow a component to manage its own state, as well as define how it behaves at
+          different points in its life.
+        </li>
+      </ul>
+    </div>
+
+    <div id="slide3" class="slide">
+      <h2>Class-based Components</h2>
+      <ul>
+        <li>
+          Use ES2015 classes that inherit from React to create components.
+        </li>
+        <li>
+          They allow a component to manage its own state, as well as define how it behaves at
+          different points in its life.
+        </li>
+        <li>However, classes in JavaScript are a little deceptive</li>
+      </ul>
+    </div>
+
+    <div id="slide4" class="slide">
+      <h2>So... Why would I ever use Class-based Components</h2>
+      <ul>
+        <li>
+          Use ES2015 classes that inherit from React to create components.
+        </li>
+        <li>
+          They allow a component to manage its own state, as well as define how it behaves at
+          different points in its life.
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
