--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="/styles/presentation.css" />
     <link href="https://fonts.googleapis.com/css?family=Pirata+One|Roboto+Slab" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/prism.css" />
+    <script src="/assets/prism.js"></script>
     <title>Introducing React Hooks</title>
   </head>
   <body>
-    <div id="title" class="slide">
+    <div class="slide">
       <img
         class="captain-hook-gif"
         src="https://media.giphy.com/media/cDsPYzjHiFEQg/giphy.gif"
@@ -18,7 +20,7 @@
       <h1 class="reallyBigHeader">React Hooks</h1>
     </div>
 
-    <div id="slide1" class="slide">
+    <div class="slide">
       <h2>A Little Background</h2>
       <ul>
         <li>
@@ -31,20 +33,32 @@
       </ul>
     </div>
 
-    <div id="slide2" class="slide">
+    <div class="slide">
       <h2>Functional Components</h2>
       <ul>
         <li>
-          Use ES2015 classes that inherit from React to create components.
+          Simple, JavaScript-y way to define components.
         </li>
         <li>
-          They allow a component to manage its own state, as well as define how it behaves at
-          different points in its life.
+          It's just a function that returns a chunk of JSX.
         </li>
       </ul>
+      <h3>Example:</h3>
+      <pre>
+          <code class="lang-javascript">
+            const PirateShip = props => (
+              &lt;div&gt;
+                &lt;h1>I'm a Pirate Ship&lt;/h1&gt;
+                &lt;p>I have {props.masts} masts.&lt;/p&gt;
+                &lt;p>I have {props.cannons} cannons.&lt;/p&gt;
+                &lt;p>And, I have {props.crewmembers} able-bodied crewmembers.&lt;/p&gt;
+              &lt;/div&gt;
+            )
+          </code>
+        </pre>
     </div>
 
-    <div id="slide3" class="slide">
+    <div class="slide">
       <h2>Class-based Components</h2>
       <ul>
         <li>
@@ -54,19 +68,116 @@
           They allow a component to manage its own state, as well as define how it behaves at
           different points in its life.
         </li>
-        <li>However, classes in JavaScript are a little deceptive</li>
+        <li>
+          However, classes in JavaScript are a little deceptive. It's outside the scope of this talk
+          to go into why, so I'll leave this
+          <a href="https://github.com/petsel/not-awesome-es6-classes#tldr">link</a>
+          here with an excellent explanation and list of resources that do a fantastic job of
+          explaining why I would prefer to avoid ES2015 classes.
+        </li>
+      </ul>
+      <h3>Example:</h3>
+      <pre>
+        <code class="lang-javascript">
+          class PirateShip extends React.Component {
+            constructor(props) {
+              super(props)
+              this.state = {
+                masts: 2,
+                cannons: 20,
+                crewmembers: 50,
+              }
+            }
+
+            render() {
+              return (
+                &lt;div&gt;
+                  &lt;h1>I'm a Pirate Ship&lt;/h1&gt;
+                  &lt;p>I have {this.state.masts} masts.&lt;/p&gt;
+                  &lt;p>I have {this.state.cannons} cannons.&lt;/p&gt;
+                  &lt;p>And, I have {this.state.crewmembers} able-bodied crewmembers.&lt;/p&gt;
+                &lt;/div&gt;
+              )
+            }
+          }
+        </code>
+      </pre>
+    </div>
+
+    <div class="slide">
+      <h2>So... Why would I ever use Class-based Components</h2>
+      <ul>
+        <li>Well, really, because React requires it.</li>
+        <li>Class-based components are the only way to have local component state.</li>
+        <li>Class-based components are the only to have access to the lifecycle methods.</li>
+        <li>
+          Functional components were relegated to use for "dumb view" components that could only use
+          the data they were given.
+        </li>
+        <li>Until today!</li>
       </ul>
     </div>
 
-    <div id="slide4" class="slide">
-      <h2>So... Why would I ever use Class-based Components</h2>
+    <div class="slide">
+      <h2>React Hooks</h2>
       <ul>
+        <li>React hooks give functional components superpowers!</li>
         <li>
-          Use ES2015 classes that inherit from React to create components.
+          Hooks make it possible to use local component state and something akin to lifecycle
+          methods in a functional component!
+        </li>
+        <li>Here's how it works:</li>
+      </ul>
+    </div>
+
+    <div class="slide">
+      <pre>
+        <code class="lang-javascript">
+          import React, { useState } from 'react'
+
+          const PirateShip = () => {
+            const [state, setState] = useState({masts: 2, cannons: 20, crewmembers: 50})
+
+            return (
+              &lt;div&gt;
+                &lt;h1>I'm a Pirate Ship&lt;/h1&gt;
+                &lt;p>I have {state.masts} masts.&lt;/p&gt;
+                &lt;p>I have {state.cannons} cannons.&lt;/p&gt;
+                &lt;p>And, I have {state.crewmembers} able-bodied crewmembers.&lt;/p&gt;
+              &lt;/div&gt;
+            )
+          }
+        </code>
+      </pre>
+      <ul>
+        <li>This is the same component as the class-based version above.</li>
+        <li>
+          useState just takes the initial state for the component and returns the state and the
+          function used to set new state.
         </li>
         <li>
-          They allow a component to manage its own state, as well as define how it behaves at
-          different points in its life.
+          And, this is much simpler code. I don't have to remember the constructor or the separate
+          render function inside the class. I don't have to deal with the weirdness that is ES6
+          classes.
+        </li>
+        <li>This enables functions to much more viable throughout an application!</li>
+      </ul>
+    </div>
+
+    <div class="slide">
+      <h2>Resources</h2>
+      <ul>
+        <li>The official <a href="https://reactjs.org/docs/hooks-intro.html">docs</a></li>
+        <li>
+          This Syntax.fm podcast: <a href="https://syntax.fm/show/092/react-hooks">Episode 92</a>
+        </li>
+        <li>
+          A project I put together with tests:
+          <a href="https://github.com/kyle-hall/react-hooks-with-typescript">TDD React Hooks</a>
+        </li>
+        <li>
+          This cool form I made using hooks:
+          <a href="https://elated-bohr-7e3d49.netlify.com/">React Forms with Hooks</a>
         </li>
       </ul>
     </div>
