add links for slide navigation

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
       <img
         class="captain-hook-gif"
         src="https://media.giphy.com/media/cDsPYzjHiFEQg/giphy.gif"
-        alt="Captain Hook sprucing up"
+        alt="Captain Hook getting scared of approaching crocodile"
       />
       <h1 class="reallyBigHeader">React Hooks</h1>
+      <a class="next-link" href="#slide2">Next</a>
     </div>
 
+    <span class="slide-anchor" id="slide2"></span>
     <div class="slide">
       <h2>A Little Background</h2>
       <ul>
@@ -31,8 +33,10 @@
           The main impetus for hooks is class-based components vs functional components.
         </li>
       </ul>
+      <a class="next-link" href="#slide3">Next</a>
     </div>
 
+    <span class="slide-anchor" id="slide3"></span>
     <div class="slide">
       <h2>Functional Components</h2>
       <ul>
@@ -56,8 +60,10 @@
             )
           </code>
         </pre>
+      <a class="next-link" href="#slide4">Next</a>
     </div>
 
+    <span class="slide-anchor" id="slide4"></span>
     <div class="slide">
       <h2>Class-based Components</h2>
       <ul>
@@ -102,8 +108,10 @@
           }
         </code>
       </pre>
+      <a class="next-link" href="#slide5">Next</a>
     </div>
 
+    <span class="slide-anchor" id="slide5"></span>
     <div class="slide">
       <h2>So... Why would I ever use Class-based Components</h2>
       <ul>
@@ -116,9 +124,15 @@
         </li>
         <li>Until today!</li>
       </ul>
+      <a class="next-link" href="#slide6">Next</a>
     </div>
 
+    <span class="slide-anchor" id="slide6"></span>
     <div class="slide">
+      <img
+        src="https://media.giphy.com/media/ehTMCiPzFTiak/giphy.gif"
+        alt="Nintendo's Super Smash Brother New Challenger Message"
+      />
       <h2>React Hooks</h2>
       <ul>
         <li>React hooks give functional components superpowers!</li>
@@ -126,11 +140,13 @@
           Hooks make it possible to use local component state and something akin to lifecycle
           methods in a functional component!
         </li>
-        <li>Here's how it works:</li>
       </ul>
+      <a class="next-link" href="#slide7">Next</a>
     </div>
 
+    <span class="slide-anchor" id="slide7"></span>
     <div class="slide">
+      <h2>Let's Redo that PirateShip component:</h2>
       <pre>
         <code class="lang-javascript">
           import React, { useState } from 'react'
@@ -162,8 +178,10 @@
         </li>
         <li>This enables functions to much more viable throughout an application!</li>
       </ul>
+      <a class="next-link" href="#slide8">Next</a>
     </div>
 
+    <span class="slide-anchor" id="slide8"></span>
     <div class="slide">
       <h2>Resources</h2>
       <ul>
